Response data or file

--- a/src/app/agent-datasets/agent-datasets.component.html
+++ b/src/app/agent-datasets/agent-datasets.component.html
@@ -6,8 +6,8 @@
 
             <div class="card-header card-header-red">
                 <div class="row header-card-red">
-                  <div class="col-11">DataSets </div>
-                  <div class="col-1 "> <span class="btnInHeader" (click)="addDataSet()" > <i class="fa fa-plus" aria-hidden="true"></i> </span></div>
+                  <div class="col-10">DataSets </div>
+                  <div class="col-2 text-right"> <span class="btnInHeader" (click)="addDataSet()" > <i class="fa fa-plus" aria-hidden="true"></i> </span></div>
                 </div>
             </div>
 
