--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -40,7 +40,7 @@
               <a class="nav-link back_green" href="#" (click)="openTestAndGenerationMode()" > 
                 <span class="sr-only">(current)</span>
                 <i class="fa fa-cogs" aria-hidden="true"></i>
-                Test & Generation
+                Test Service 
               </a>
             </li>
 
@@ -87,10 +87,10 @@
   <div class="footer">
       <div class="row">
         <div class="col-6 footer-left">
-          Usine à bouchon
+          Usine à bouchon Gen&SiS - Gs - Admin 
         </div>
         <div class="col-6 footer-right">
-            <i class="fa fa-copyright" aria-hidden="true"></i> {{ yearCopyright }}, made by <span class="copyright">ChamsII</span> 
+            <i class="fa fa-copyright" aria-hidden="true"></i> {{ yearCopyright }}, made by  <img src="../../assets/img/avatar.jpg" alt="Avatar" class="avatar">  <span class="copyright"> <a href="https://github.com/ChamsII/" target="_blank" >@ChamsII</a></span> 
         </div>
 
       </div>
