--- a/src/app/generation/generation.component.scss
+++ b/src/app/generation/generation.component.scss
@@ -47,3 +47,14 @@
     background: linear-gradient(60deg,#ef5350,#e53935);
     color: #FFF !important;
 }
+
+.DynamicInputRow {
+    border: 1px solid #dfdfdf;
+    background: rgba(223, 223, 223, 0.5);
+    padding: 3px 5px 3px 8px;
+    margin: 0px 10px 0px 10px;
+}
+
+.danger {
+    color: #e53935 !important;
+}
