--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -153,7 +153,7 @@ a {
     font-size: 12px !important
 }
 
-.copyright {
+.copyright , .copyright a , .copyright a:hover {
     font-weight: bold;
     font-size: 14px;
     color: #ef5350 !important;
