--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
                 
                 <span class="nameAgent"> <i class="fa fa-inbox" aria-hidden="true"></i> {{ agentSelect.name }}  </span>
                 <span class="space"> </span>
-                <span class="urlAgent"> Agent : <i class="fa fa-link" aria-hidden="true"></i> {{agentSelect.hostname}}:{{agentSelect.agent_port}}/  </span>
+                <span class="urlAgent"> Agent : <i class="fa fa-link" aria-hidden="true"></i> {{agentSelect.hostname_bouchon}}:{{agentSelect.agent_port}}/  </span>
                 <span class="space"> </span>
                 <span class="urlAgent"> Admin <i class="fa fa-link" aria-hidden="true"></i> {{agentSelect.hostname}}:{{agentSelect.admin_port}}/  </span>
                 <span class="space"> </span>
