--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -15,3 +15,17 @@
 #sidebar-wrapper {
     height: 100%;
 }
+
+.list_agent {
+    height: 500px !important;
+    overflow-x: scroll;
+    width: 100%;
+}
+
+.size_list_agents {
+    height: 1000px;
+    overflow-x: auto;
+}
+.border_bottom_sep {
+
+}
