--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -233,6 +233,19 @@ a {
     cursor: pointer;
 }
 
+
+.div_grey {
+    background: linear-gradient(60deg,#d4d6d6,#7e7e7e);
+    color: #FFF !important;
+    font-size: 14px !important;
+    box-shadow: 0 4px 20px 0 rgba(0,0,0,.14),0 7px 10px -5px rgba(177, 177, 177, 0.4);
+    margin: 5px  0px 5px 0px !important;
+    padding: 5px !important;
+    text-align: center;
+    cursor: pointer;
+}
+
+
 .saveEdite {
     font-size: 12px;
     color: #333;
